Fix jumping in list view.

--- a/styles/custom.css
+++ b/styles/custom.css
@@ -39,7 +39,7 @@
 	margin-left: 146px;
 }
 
-.toc.slide li.active > a {
+.toc.slide li.current > a {
 	font-weight: bold;
 }
 
